--- a/docs/.vuepress/theme/theme.css
+++ b/docs/.vuepress/theme/theme.css
@@ -1,6 +1,8 @@
 @tailwind preflight;
 @tailwind components;
 
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
+
 body {
   background-image: url("./images/halftone.png");
   @apply .font-sans;
