--- a/blog/.vuepress/theme/styles/theme.css
+++ b/blog/.vuepress/theme/styles/theme.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
 body {
   background-image: url("../images/halftone.png");
@@ -10,7 +9,7 @@ body {
 
 a {
   text-decoration: none;
-  @apply .text-red;
+  @apply .text-red-600;
 }
 
 p {
@@ -42,11 +41,11 @@ p {
 }
 
 .blog-post blockquote {
-  @apply .text-gray .border-l-4 .border-gray .pl-4 .mx-4;
+  @apply .text-gray-500 .border-l-4 .border-gray-500 .pl-4 .mx-4;
 }
 
 ul.categories li a.active {
-  @apply .bg-red .text-white .px-1 .rounded;
+  @apply .bg-red-700 .text-white .px-1 .rounded;
 }
 
 @tailwind utilities;
