--- a/blog/.vuepress/theme/styles/theme.css
+++ b/blog/.vuepress/theme/styles/theme.css
@@ -94,23 +94,31 @@ ul.categories li a.active {
 }
 
 .blog-post p {
-  @apply mb-4 text-lg overflow-auto;
+  @apply mb-4 text-lg overflow-auto break-words;
 }
 
 .blog-post code {
-  @apply rounded bg-gray-200 px-1 text-base;
+  @apply rounded bg-gray-100 text-gray-700 text-base;
 }
 
 .blog-post div pre {
-  @apply mb-6 bg-gray-200 p-1 rounded leading-tight;
+  @apply mb-6 bg-gray-100 p-1 rounded leading-tight;
 }
 
 .blog-post ul {
   @apply list-disc;
 }
 
-.blog-post ul li {
-  @apply text-lg my-4 ml-4 leading-normal;
+.blog-post ol {
+  @apply list-decimal;
+}
+
+.blog-post li {
+  @apply mb-2;
+}
+
+.blog-post ul, .blog-post ol {
+  @apply ml-8 mb-4;
 }
 
 .blog-post blockquote {
@@ -119,7 +127,7 @@ ul.categories li a.active {
 
 /* Text Snippets */
 .snippet {
-  @apply border border-gray-400 rounded w-full mb-4 p-1 font-mono overflow-hidden relative;
+  @apply border border-gray-400 rounded w-full mb-4 p-1 font-mono overflow-x-auto relative;
 }
 
 .snippet table .code-content {
@@ -131,7 +139,7 @@ ul.categories li a.active {
 }
 
 .snippet .filename {
-  @apply absolute right-2 bottom-1;
+  @apply absolute right-2 bottom-1 text-gray-500;
 }
 
 ::selection {
