--- a/content/.vuepress/public/decks/theme.css
+++ b/content/.vuepress/public/decks/theme.css
@@ -51,6 +51,7 @@ body {
   letter-spacing: 0.02em;
   text-transform: none;
   text-shadow: none;
+  line-height: 1.3;
 }
 
 .reveal h1 {
@@ -81,9 +82,10 @@ body {
 }
 
 .reveal code {
-  line-height: 1.1;
+  line-height: 1.2;
   font-family: monospace;
   padding: 10px;
+  letter-spacing: 0;
 }
 
 .reveal ul {
@@ -146,4 +148,19 @@ body {
 
 .about_me img {
   vertical-align: middle;
+}
+
+table.side-by-side {
+  width: 100%;
+
+}
+
+table.side-by-side td {
+  width: 50%;
+  vertical-align: top;
+  background-color: white;
+}
+
+table.side-by-side pre {
+  margin: 0;
 }
