--- a/content/.vuepress/public/decks/theme.css
+++ b/content/.vuepress/public/decks/theme.css
@@ -156,9 +156,10 @@ table.side-by-side {
 }
 
 table.side-by-side td {
-  width: 50%;
+  max-width: 50%;
   vertical-align: top;
   background-color: white;
+  overflow-x: scroll;
 }
 
 table.side-by-side pre {
